<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AppBackground">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/text_view_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_view_address_admin_main"
                android:padding="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="15dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_name_main_admin"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:padding="8dp"
                android:layout_marginTop="15dp"
                android:hint="@string/text_view_name_admin_main"
                android:drawablePadding="8dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_order_main_admin"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:padding="8dp"
                android:layout_marginTop="15dp"
                android:hint="@string/text_view_Order_admin_main"
                android:drawablePadding="8dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_phone_number_main_admin"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:padding="8dp"
                android:layout_marginTop="15dp"
                android:fontFamily="monospace"
                android:hint="@string/text_view_Phone_admin_main"
                android:drawablePadding="8dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:padding="5dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="15dp"
                android:id="@+id/image_view_prescription_main_admin"
                />
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:id="@+id/accept_button_main_admin"
                    android:background="@drawable/button_accept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accept_button_main_admin"
                    android:layout_marginEnd="30dp"
                    android:textColor="@android:color/white"
                    />
                <Button
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:id="@+id/deny_button_main_admin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deny_button_main_admin"
                    android:background="@drawable/button_deny"
                    android:textColor="@android:color/white"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    </androidx.cardview.widget.CardView>
</RelativeLayout>