<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_add_admin"
            android:text="@string/user_details_admin_add"
            android:textSize="16sp"
            android:textAlignment="textStart"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_add_admin_2"
            android:layout_toEndOf="@id/user_add_admin"
            android:layout_marginStart="15dp"
            android:inputType="textMultiLine"
            tools:ignore="TextViewEdits"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_order_admin"
        android:hint="@string/user_details_admin_order"
        android:textSize="16sp"
        android:textAlignment="textStart"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_order_admin_2"
            android:layout_toEndOf="@id/user_order_admin"
            android:layout_marginStart="39dp"
            android:inputType="textMultiLine"
            tools:ignore="TextViewEdits"
            />
    </RelativeLayout>
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/accept_button_user_details_admin"
        android:layout_width="69dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_accept"
        android:text="@string/accept_button_main_admin"
        android:textColor="@android:color/white" />
    <Button
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/deny_button_user_details_admin"
        android:layout_width="69dp"
        android:layout_height="36dp"
        android:text="@string/deny_button_main_admin"
        android:background="@drawable/button_deny"
        android:textColor="@android:color/white"
        />
</LinearLayout>

</LinearLayout>
